# gio-qt

./: .gitignore  CMakeLists.txt  README.md
.reuse/: dep5
archlinux/: PKGBUILD
debian/: changelog  control  copyright
gio-qt/: CMakeLists.txt  dgiofile.cpp  dgiofile.h  dgiofileinfo.cpp  dgiofileinfo.h  dgiofileiterator.cpp  dgiomount.cpp  dgiomount.h  dgiomountoperation.cpp  dgiomountoperation.h  dgioutils.cpp  dgioutils.h  dgiovolume.cpp  dgiovolume.h  dgiovolumemanager.cpp  dgiovolumemanager.h  gio-qt.pc.in  qt5.cmake  qt6.cmake
gio-qt/include/: dgiodrive.h  dgiofile.h  dgiofileinfo.h  dgiofileiterator.h  dgiomount.h  dgiomountoperation.h  dgiosettings.h  dgioutils.h  dgiovolume.h  dgiovolumemanager.h  dglibutils.h
gio-qt/private/: dgiohelper.cpp  dgiohelper.h
gio-qt/source/: dgiodrive.cpp  dgiofile.cpp  dgiofileinfo.cpp  dgiofileiterator.cpp  dgiomount.cpp  dgiomountoperation.cpp  dgiosettings.cpp  dgioutils.cpp  dgiovolume.cpp  dgiovolumemanager.cpp  dglibutils.cpp
qgio-tools/: CMakeLists.txt  main.cpp  qt5.cmake  qt6.cmake
test/: CMakeLists.txt  tst_dgiosettings.cpp  tst_matchgioenum.cpp  tst_simplefileinfo.cpp
